// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectDropdown passes correct props to OptionContent for a selected item: OptionContent gets correct props when an option is selected 1`] = `
Object {
  "$disabled": undefined,
  "$error": false,
  "$isHighlighted": undefined,
  "$isLoading": false,
  "$multi": false,
  "$required": false,
  "$searchable": true,
  "$selected": true,
  "$size": "default",
  "$type": "select",
  "$width": 100,
  "aria-readonly": undefined,
  "aria-selected": true,
  "children": <span>
    option.label
  </span>,
}
`;

exports[`SelectDropdown passes correct props to OptionContent: OptionContent gets correct props when an option is not selected 1`] = `
Object {
  "$disabled": undefined,
  "$error": false,
  "$isHighlighted": undefined,
  "$isLoading": false,
  "$multi": false,
  "$required": false,
  "$searchable": true,
  "$selected": false,
  "$size": "default",
  "$type": "select",
  "$width": 100,
  "aria-readonly": undefined,
  "aria-selected": false,
  "children": <span>
    option.label
  </span>,
}
`;

exports[`SelectDropdown renders StatefulMenu: Passes correct overrides to the StatefulMenu 1`] = `
Object {
  "List": Object {
    "component": [Function],
    "props": Object {
      "$maxHeight": "1000px",
      "aria-multiselectable": false,
    },
  },
  "Option": Object {
    "props": Object {
      "getItemLabel": [Function],
      "onMouseDown": [Function],
      "overrides": Object {
        "ListItem": Object {
          "component": [MockFunction],
          "props": Object {},
          "style": undefined,
        },
      },
    },
  },
}
`;
